Criando a contagem regressiva

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <header class="hero">
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
-            <p class="hero__text">O maior evento de tecnologia do Brasil começa em 10d 12h 20m 15s</p>
+            <p class="hero__text">O maior evento de tecnologia do Brasil começa em <span id="contador"></span> </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
                     <li class="infos-bar__infos__item">
@@ -29,7 +30,7 @@
                     </li>
                     <li class="infos-bar__infos__item">
                         <b>Quando</b>
-                        05/02/2024 às 19hrs
+                        02/02/2024 às 19hrs
                     </li>
                 </ul>
                 <a href="" class="button button--primary">Garanta sua vaga</a>
@@ -37,14 +38,82 @@
         </div>
     </header>
 
+ <main>
+    <section class="event event--frontend">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Front-end</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum nemo amet sed, 
+                    quibusdam suscipit sit aliquam, expedita totam, possimus reiciendis qui facilis 
+                    blanditiis! Quibusdam, hic placeat? Obcaecati dolore deserunt rerum hic quas, 
+                    asperiores at sint assumenda incidunt sed maiores. Iusto architecto ex, et eaque 
+                    veniam, consectetur obcaecati commodi aut assumenda voluptatum ut quisquam vel, 
+                    odit reiciendis facilis inventore laboriosam quis.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+
+    <section class="event event--ui-ux event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">UI/UX</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum nemo amet sed, 
+                    quibusdam suscipit sit aliquam, expedita totam, possimus reiciendis qui facilis 
+                    blanditiis! Quibusdam, hic placeat? Obcaecati dolore deserunt rerum hic quas, 
+                    asperiores at sint assumenda incidunt sed maiores. Iusto architecto ex, et eaque 
+                    veniam, consectetur obcaecati commodi aut assumenda voluptatum ut quisquam vel, 
+                    odit reiciendis facilis inventore laboriosam quis.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+
+    <section class="event event--data-science">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Data Science</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum nemo amet sed, 
+                    quibusdam suscipit sit aliquam, expedita totam, possimus reiciendis qui facilis 
+                    blanditiis! Quibusdam, hic placeat? Obcaecati dolore deserunt rerum hic quas, 
+                    asperiores at sint assumenda incidunt sed maiores. Iusto architecto ex, et eaque 
+                    veniam, consectetur obcaecati commodi aut assumenda voluptatum ut quisquam vel, 
+                    odit reiciendis facilis inventore laboriosam quis.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+
+    <section class="event event--backend event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">Back-end</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum nemo amet sed, 
+                    quibusdam suscipit sit aliquam, expedita totam, possimus reiciendis qui facilis 
+                    blanditiis! Quibusdam, hic placeat? Obcaecati dolore deserunt rerum hic quas, 
+                    asperiores at sint assumenda incidunt sed maiores. Iusto architecto ex, et eaque 
+                    veniam, consectetur obcaecati commodi aut assumenda voluptatum ut quisquam vel, 
+                    odit reiciendis facilis inventore laboriosam quis.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+ </main>
 
 
 
 
 
 
-
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
 
