--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
                     odit reiciendis facilis inventore laboriosam quis.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="UI/UX">
         </div>
     </section>
 
@@ -86,7 +86,7 @@
                     odit reiciendis facilis inventore laboriosam quis.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="Data-Science">
         </div>
     </section>
 
@@ -103,7 +103,7 @@
                     odit reiciendis facilis inventore laboriosam quis.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt="Back-end">
         </div>
     </section>
  </main>
